package ridesharingservice

type Passenger struct {
	ID       int
	Name     string
	Contact  string
	Location *Location
}
